--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -43,12 +43,13 @@
           <div class="item item-accordion item-content" ng-show="isPostShown(post)">
             <p>{{post.author.name}}</p>
             <p>{{post.content | htmlToPlaintext}}</p>
+            <p>{{post.post_meta.data}}</p>
           </div>
           <div class="item item-content item-checkbox">
             <label class="checkbox checkbox-balanced">
               <input type="checkbox">
             </label>
-            12:00
+            <p>{{post.post_meta.horario}}</p>
           </div>
     	  </div>
       </ion-content>
