Troca para pegar o JSON do site do WordCamp SP 2014

--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -40,16 +40,19 @@
                <i class="icon" ng-class="isPostShown(post) ? 'ion-chevron-up' : 'ion-chevron-down'"></i>
              </button>
       		</div>
+          <div class="item item-avatar" ng-show="isPostShown(post)">
+            <img ng-src="{{post.author.avatar}}">
+            <h2>{{post.speaker.title}}</h2>
+            <p>{{post.author.URL}}</p>
+          </div>
           <div class="item item-accordion item-content" ng-show="isPostShown(post)">
-            <p>{{post.author.name}}</p>
             <p>{{post.content | htmlToPlaintext}}</p>
-            <p>{{post.post_meta.data}}</p>
           </div>
           <div class="item item-content item-checkbox">
             <label class="checkbox checkbox-balanced">
               <input type="checkbox">
             </label>
-            <p>{{post.post_meta.horario}}</p>
+            <p class="row"><i class="icon ion-clock padding-horizontal"></i>{{post.post_meta._wcpt_session_time}}<i class="icon ion-calendar padding-horizontal"></i>{{post.post_meta._wcpt_session_time | formatDate }}</p>
           </div>
     	  </div>
       </ion-content>
