--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -29,7 +29,7 @@
         <p class="title">{{title}}</p>
       </div>
       <ion-content class="has-subheader">
-    	  <div class="list card " ng-repeat="post in posts">
+    	  <div class="list card " ng-repeat="post in posts | orderBy:'post_meta[0].value'">
       		<div class="item item-button-right item-stable"
           ng-click="togglePost(post)"
           ng-class="{active: isPostShown(post)}">
