--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -30,7 +30,7 @@
       </div>
       <ion-content class="has-subheader">
     	  <div class="list card " ng-repeat="post in posts">
-      		<div class="item item-button-right item-stable"
+      		<div class="item item-button-right item-text-wrap item-stable"
           ng-click="togglePost(post)"
           ng-class="{active: isPostShown(post)}">
 
@@ -41,14 +41,13 @@
                 </button>
             </div>
 
-              <div class="item item-avatar" ng-show="isPostShown(post)">
+              <div class="item item-avatar item-divider" ng-show="isPostShown(post)">
                   <img ng-src="{{post.author.avatar}}">
                   <h2>{{post.speaker.title}}</h2>
                   <p><a href="{{post.author.URL}}">{{post.author.URL}}<a></p>
               </div>
 
-              <div class="item item-accordion item-content" ng-show="isPostShown(post)">
-                <p>{{post.author.name}}</p>
+              <div class="item item-text-wrap" ng-show="isPostShown(post)">
                 <p>{{post.content | htmlToPlaintext}}</p>
               </div>
 
