--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -34,20 +34,20 @@
           ng-click="togglePost(post)"
           ng-class="{active: isPostShown(post)}">
 
-             <h2>{{post.title}}</h2>
+           <h2>{{post.title}}</h2>
 
-            <button class="button button-clear button-small">
-                <i class="icon" ng-class="isPostShown(post) ? 'ion-chevron-up' : 'ion-chevron-down'"></i>
-                </button>
-            </div>
+           <button class="button button-clear button-small">
+             <i class="icon" ng-class="isPostShown(post) ? 'ion-chevron-up' : 'ion-chevron-down'"></i>
+           </button>
+          </div>
 
-              <div class="item item-avatar item-divider" ng-show="isPostShown(post)">
+              <div class="item item-accordion item-avatar item-divider" ng-show="isPostShown(post)">
                   <img ng-src="{{post.author.avatar}}">
                   <h2>{{post.speaker.title}}</h2>
                   <p><a href="{{post.author.URL}}">{{post.author.URL}}<a></p>
               </div>
 
-              <div class="item item-text-wrap item-content" ng-show="isPostShown(post)">
+              <div class="item item-accordion item-text-wrap item-content" ng-show="isPostShown(post)">
                 <p>{{post.content | htmlToPlaintext}}</p>
               </div>
 
