Correção do checkbox: link aberto from hell

--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -44,7 +44,7 @@
               <div class="item item-accordion item-avatar item-divider" ng-show="isPostShown(post)">
                   <img ng-src="{{post.author.avatar}}">
                   <h2>{{post.speaker.title}}</h2>
-                  <p><a href="{{post.author.URL}}">{{post.author.URL}}<a></p>
+                  <p><a href="{{post.author.URL}}">{{post.author.URL}}</a></p>
               </div>
 
               <div class="item item-accordion item-text-wrap item-content" ng-show="isPostShown(post)">
