--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -32,22 +32,18 @@
     	  <div class="list card " ng-repeat="post in posts | orderBy:'post_meta[0].value'">
       		<div class="item item-button-right item-stable item-text-wrap"
           ng-click="togglePost(post)"
-          ng-class="{active: isPostShown(post),
-                    credenciamento: post.title == 'Credenciamento',
-                    abertura: post.title == 'Abertura',
-                    almoco:   post.title == 'Almoço',
-                    coffee:   post.title == 'Coffee Break',
-                    encerramento: post.title == 'Encerramento',
-                    wordcana: post.title == 'WordCana'}">
+          ng-class="sessionClass(post)">
 
            <h2>{{post.title}}</h2>
 
-           <button class="button button-clear button-small">
+           <button class="button button-clear button-small"
+                   ng-if="isRegularSession(post)">
              <i class="icon" ng-class="isPostShown(post) ? 'ion-chevron-up' : 'ion-chevron-down'"></i>
            </button>
           </div>
 
-              <div class="item item-accordion item-avatar item-divider" ng-show="isPostShown(post)">
+              <div class="item item-accordion item-avatar item-divider" ng-show="isPostShown(post)"
+                  ng-if="isRegularSession(post)">
                   <img ng-src="{{post.author.avatar}}">
                   <h2>{{post.speaker.title}}</h2>
                   <p><a href="{{post.author.URL}}">{{post.author.URL}}</a></p>
