LocalNotification test. Funcionando, dispara uma notification "ondeviceready"

--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -18,6 +18,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
 	<script src="js/controller.js"></script>
+    <script src="js/notifications.js"></script>
   </head>
   <body ng-app="starter" ng-controller="DashCtrl">
 
