--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -30,7 +30,7 @@
       </div>
       <ion-content class="has-subheader">
     	  <div class="list card " ng-repeat="post in posts | orderBy:'post_meta[0].value'">
-      		<div class="item item-button-right item-stable item-text-wrap"
+      		<div class="item item-button-right item-text-wrap"
           ng-click="togglePost(post)"
           ng-class="sessionClass(post)">
 
