--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -18,7 +18,6 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
 	<script src="js/controller.js"></script>
-    <script src="js/notifications.js"></script>
   </head>
   <body ng-app="starter" ng-controller="DashCtrl">
 
@@ -56,7 +55,7 @@
 
               <div class="item item-checkbox">
                 <label class="checkbox checkbox-balanced">
-                  <input type="checkbox">
+                  <input type="checkbox" ng-click="scheduleSession(post)">
                 </label>
                 <p class="row"><i class="icon ion-clock padding-horizontal"></i>{{post.post_meta[0]["value"] | formatHour}}<i class="icon ion-calendar padding-horizontal"></i>{{post.post_meta[0]["value"] | formatDate}}
                 <span ng-if="isRegularSession(post)"><i class="icon ion-map padding-horizontal"></i>{{showTrack(post, 'local')}} <i class="icon ion-pound padding-horizontal"></i>{{showTrack(post, 'trilha')}}</span></p>
