--- a/wpApp/www/index.html
+++ b/wpApp/www/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-	<title></title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+        <title>WordCampMe</title>
+        <!-- compiled css output -->
+        <link href="css/ionic.app.css" rel="stylesheet">
 
+        <!-- ionic/angularjs js -->
+        <script src="lib/ionic/js/ionic.bundle.js"></script>
 
 	<!-- compiled css output -->
 	<link href="css/ionic.app.css" rel="stylesheet">
@@ -21,36 +25,30 @@
 </head>
 <body ng-app="starter" ng-controller="DashCtrl">
 	<div class="bar bar-header bar-dark">
-		<h1 class="title">WP APP</h1>
+		<h1 class="title">WordCamp SP 2015</h1>
 	</div>
 	<ion-tabs class="tabs-positive tabs-icon-only">
-		<ion-tab title="Home" icon="ion-home" href="#/tab/home" icon-on="ion-ios-clock" icon-off="ion-ios-clock-outline">
-			<div class="bar bar-subheader bar-assertive">
+		<ion-tab title="Bem vindo(a)!" href="#/tab/home" icon="ion-home">
+			<div class="bar bar-subheader bar-positive">
 				<p class="title">{{title}}</p>
 			</div>
-			<ion-content class="has-subheader dark padding">
-				<div class="list card">
-					<div class="item item-avatar">
-						<img src="img/ionic.png">
-						<h2>Pretty Hate Machine</h2>
-						<p>Nine Inch Nails</p>
-					</div>
+			<ion-content class="has-subheader">
+				<div class="list">
 					<div class="item item-image">
-						<img src="img/ionic.png">
+						<img src="img/wcsp_banner.jpg">
 					</div>
-					<a class="item item-icon-left assertive" href="#">
-						<i class="icon ion-music-note"></i>
-						Start listening
-					</a>
+					<div class="item item-text-wrap">
+						<p>Marque as palestras que você quer assistir.</p>
+					</div>
 				</div>
 			</ion-content>
 		</ion-tab>
 
-		<ion-tab title="Programação" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline">
-			<div class="bar bar-subheader bar-assertive">
+		<ion-tab title="Programação" icon="ion-grid" href="#/tab/schedule" class="schedule">
+			<div class="bar bar-subheader bar-positive">
 				<p class="title">{{title}}</p>
 			</div>
-			<ion-content class="has-subheader">
+			<ion-content class="has-subheader schedule-content">
 				<div class="list card " ng-repeat="post in posts | orderBy:&apos;post_meta[0].value&apos;">
 					<div class="item item-button-right item-text-wrap" ng-click="togglePost(post)" ng-class="sessionClass(post)">
 
@@ -68,7 +66,7 @@
 					</div>
 
 					<div class="item item-accordion item-content" ng-show="isPostShown(post)">
-						<p><i class="icon ion-map padding-right"></i>{{showTrack(post, &apos;local&apos;)}} <i class="icon ion-pound padding-horizontal"></i>{{showTrack(post, &apos;trilha&apos;)}}</p>
+						<p><i class="icon ion-location"></i> {{showTrack(post, &apos;local&apos;)}} <i class="icon ion-pound padding-left"></i> {{showTrack(post, &apos;trilha&apos;)}}</p>
 					</div>
 
 					<div class="item item-accordion item-text-wrap item-content" ng-show="isPostShown(post)">
@@ -79,7 +77,7 @@
 						<label class="checkbox checkbox-balanced">
 							<input type="checkbox" ng-click="scheduleSession(post)">
 						</label>
-						<p class="row"><i class="icon ion-clock padding-right"></i>{{post.post_meta[0][&quot;value&quot;] | formatHour}}<i class="icon ion-calendar padding-horizontal"></i>{{post.post_meta[0][&quot;value&quot;] | formatDate}}
+						<p class="row"><i class="icon ion-clock"></i>&nbsp;{{post.post_meta[0][&quot;value&quot;] | formatHour}}<i class="icon ion-calendar padding-left"></i>&nbsp;{{post.post_meta[0][&quot;value&quot;] | formatDate}}
 						</p>
 					</div>
 
